<resources>
    <string name="app_name">Restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="login_button">Login</string>
    <string name="splash_word">food</string>
    <string name="home">home</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="order">Orders</string>
    <string name="email_instruction">Please enter yur email address below to receive an email instruction for resetting your password.</string>
    <string name="send">send</string>
    <string name="code">Code</string>
    <string name="new_password">New password</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="check_mail">Check your email to find the code</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_restaurant">Register Restaurant</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="delivery_time">Delivery time</string>
    <string name="next">NEXT</string>
    <string name="contact_information">Contact Information</string>
    <string name="mobile">Mobile</string>
    <string name="whats">Whats up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="minimum_order">Minimum order</string>
    <string name="category_name">Category name</string>
    <string name="my_categories">My Categories</string>
    <string name="add_image">Add category image</string>
    <string name="choose_city">Choose city</string>
    <string name="choose_region">Choose region</string>
    <string name="add_store_image">Add store image</string>
    <string name="fill_fields">Please fill in all fields</string>
    <string name="tab_compeleted_order">Compeleted Orders</string>
    <string name="tab_pending_orders">Pending Orders</string>
    <string name="tab_current_orders">Current Orders</string>
</resources>
