<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>

        <variable name="register"
            type="com.example.restaurant.data.model.dataBinding.Register"/>

        <variable name="registerFragment"
            type="com.example.restaurant.ui.fragment.registerRestaurant.RegisterRestaurantFragment"
            />
        <variable name="progress"
            type="com.example.restaurant.data.model.dataBinding.Progress"
            />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <include
                android:id="@+id/include3"
                layout="@layout/toolbar"/>

            <TextView
                android:id="@+id/textView8"
                style="@style/title"
                android:text="@string/register_restaurant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include3" />

            <EditText
                android:id="@+id/nameEditText"
                style="@style/circleEditText"
                android:text="@={register.name}"
                android:layout_marginTop="20dp"
                android:hint="@string/restaurant_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/mailEditText"
                style="@style/circleEditText"
                android:layout_marginTop="8dp"
                android:text="@={register.email}"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />


            <EditText
                android:id="@+id/deliveryTimeEditText"
                style="@style/circleEditText"
                android:layout_marginTop="8dp"
                android:text="@={register.deliveryTime}"
                android:hint="@string/delivery_time"
                android:inputType="number"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailEditText" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/shape_rectangle_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deliveryTimeEditText">

            </View>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:dropDownHeight="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/shape_rectangle_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:dropDownHeight="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <EditText
                android:id="@+id/passEditText"
                style="@style/circleEditText"
                android:hint="@string/password"
                android:layout_marginTop="8dp"
                android:text="@={register.password}"
                android:padding="15dp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <EditText
                android:id="@+id/confirmPassEditText"
                style="@style/circleEditText"
                android:hint="@string/confirm_password"
                android:layout_marginTop="8dp"
                android:text="@={register.confirmPassword}"
                android:inputType="textPassword"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passEditText" />

            <EditText
                android:id="@+id/minOrderEditText"
                style="@style/circleEditText"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:padding="15dp"
                android:text="@={register.minOrder}"
                android:hint="@string/minimum_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassEditText" />
            <EditText
                android:id="@+id/deliveryChargeEditText"
                style="@style/circleEditText"
                android:hint="@string/delivery_charge"
                android:layout_marginTop="8dp"
                android:text="@={register.deliveryCharge}"
                android:inputType="number"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/minOrderEditText" />

            <EditText
                android:id="@+id/editText10"
                style="@style/circleEditText"
                android:padding="15dp"
                android:text="@={register.phone}"
                android:inputType="number"
                android:hint="@string/mobile"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deliveryChargeEditText"/>


            <EditText
                android:id="@+id/editText8"
                style="@style/circleEditText"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:padding="15dp"
                android:text="@={register.whats}"
                android:hint="@string/whats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText10" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:padding="15dp"
                android:onClick="@{(v)-> registerFragment.onImageClick(v)}"
                android:background="@drawable/shape_rectangle_white"
                android:backgroundTint="#F3F2F2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText8" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3" />


            <Button
                android:id="@+id/button6"
                style="@style/button"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/send"
                android:onClick="@{(v)-> registerFragment.onNextButtonClick(v)}"
                android:visibility="@{progress.hideProgressBar ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{progress.hideProgressBar ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/button6"
                app:layout_constraintEnd_toEndOf="@+id/button6"
                app:layout_constraintStart_toStartOf="@+id/button6"
                app:layout_constraintTop_toTopOf="@+id/button6" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>